fixed overlaps

--- a/src/css/MoviesPortal.css
+++ b/src/css/MoviesPortal.css
@@ -9,8 +9,8 @@
     gap: 5px;
 }
 .form-input{
-    width: 90%;
     height: 50px;
+    width: 85%;
     border-radius: 5px;
     cursor: pointer;
     padding: 10px 15px;
@@ -25,8 +25,8 @@
     outline: none;
 }
 .form-button{
-    width: 10%;
     height: 50px;
+    width: 8.5%;
     border-radius: 5px;
     cursor: pointer;
     border: solid;
@@ -41,4 +41,7 @@
 }
 .card-link{
     color:darkgreen
+}
+.body-container{
+    margin: 30px;
 }
